--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -12,14 +12,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python 3.10.6
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: 3.10.6
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        pip install -U pip
         pip install build
 
     - name: Build package
