--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -14,18 +14,17 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
+    - name: Checkout
+    - uses: actions/checkout@v3
  
-    - uses: actions/checkout@v2
- 
-    - name: Set up Python 3.10.5
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.10.6
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.10.5
+        python-version: 3.10.6
  
     - name: Set up dependencies
       run: |
-        python3 -m pip install -U pip
-        pip install -r tests/requirements.txt
+        pip install -U pip && pip install pytest
  
     - name: Run the tests
       run: |
