--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -15,7 +15,7 @@ jobs:
  
     steps:
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
  
     - name: Set up Python 3.10.6
       uses: actions/setup-python@v4
