--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.10.6
+    - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10.6
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
