--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,9 +1,7 @@
 name: Unit Tests
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
   pull_request:
     branches:
       - main
@@ -17,7 +15,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
  
-    - name: Set up Python 3.10
+    - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
