--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,5 +27,4 @@ jobs:
         pip install -U pip && pip install pytest
  
     - name: Run the tests
-      run: |
-        pytest -v
+      run: pytest -v
