--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
+exclude = '''
+^/(
+  (
+    venv
+    | avro/resources/avrodict.py
+  )
+)
+'''
