--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
     types: [published]
 
 jobs:
-  release:
+  build-sdist:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,13 +18,57 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        pip install -U pip
-        pip install build
+    - name: Build source distribution
+      run: python setup.py sdist
 
-    - name: Build package
-      run: python -m build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: sdist
+        path:
+          dist/*
+
+  build-bdist:
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Build binary distribution
+        run: python setup.py bdist_wheel
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: bdist-${{ matrix.os }}
+          path:
+            dist/*
+
+  release:
+    name: Release (PyPI & GitHub)
+
+    runs-on: ubuntu-latest
+    needs: [build-sdist, build-bdist]
+
+    steps:
+    - name: Set directory
+      run: |
+        mkdir dist
+
+    - name: Download artifacts
+      with:
+        path: dist
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
@@ -33,7 +77,7 @@ jobs:
         file: dist/*
         tag: ${{ github.ref }}
         overwrite: true
-        file_glob: true
+        file_glob: true   
       
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
