--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,14 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
+        include:
+          - os: ubuntu-latest
+            plat: linux
+          - os: macos-latest
+            plat: darwin
+          - os: windows-latest
+            plat: win
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -50,7 +58,7 @@ jobs:
       - name: Build binary distribution
         run: |
           pip install setuptools wheel
-          python setup.py bdist_wheel --plat-name ${{ matrix.os }}
+          python setup.py bdist_wheel --plat-name ${{ matrix.plat }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -82,16 +90,16 @@ jobs:
         name: bdist-macos-latest
         path: dist
 
-    - name: Download macOS artifact
+    - name: Download Windows artifact
       uses: actions/download-artifact@v3
       with:
-        name: bdist-macos-latest
+        name: bdist-windows-latest
         path: dist
 
-    - name: Download macOS artifact
+    - name: Download Ubuntu artifact
       uses: actions/download-artifact@v3
       with:
-        name: bdist-macos-latest
+        name: bdist-ubuntu-latest
         path: dist
 
     - name: Upload binaries to release
