--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
     types: [published]
 
 jobs:
-  build-sdist:
+  release:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,89 +18,13 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Build source distribution
+    - name: Install dependencies
       run: |
-        pip install setuptools
-        python setup.py sdist
+        pip install -U pip
+        pip install build
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: sdist
-        path:
-          dist/*
-
-  build-bdist:
-    name: ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
-        include:
-          - os: ubuntu-latest
-            plat: linux
-          - os: macos-latest
-            plat: darwin
-          - os: windows-latest
-            plat: win
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Build binary distribution
-        run: |
-          pip install setuptools wheel
-          python setup.py bdist_wheel --plat-name ${{ matrix.plat }}
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: bdist-${{ matrix.os }}
-          path:
-            dist/*
-
-  release:
-    name: Release (PyPI & GitHub)
-
-    runs-on: ubuntu-latest
-    needs: [build-sdist, build-bdist]
-
-    steps:
-    - name: Set directory
-      run: |
-        mkdir dist
-
-    - name: Download source artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: sdist
-        path: dist
-
-    - name: Download macOS artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: bdist-macos-latest
-        path: dist
-
-    - name: Download Windows artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: bdist-windows-latest
-        path: dist
-
-    - name: Download Ubuntu artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: bdist-ubuntu-latest
-        path: dist
+    - name: Build package
+      run: python -m build
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
@@ -109,7 +33,7 @@ jobs:
         file: dist/*
         tag: ${{ github.ref }}
         overwrite: true
-        file_glob: true   
+        file_glob: true
       
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
