--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[tool.ruff]
+target-version = "py311"
+line-length = 110
+ignore = [
+  "E203",
+  "E252",
+  "E402",
+  "F401", 
+  "F403",
+  "F601",
+  "W503"
+]
+
+[tool.ruff.per-file-ignores]
+"avro/resources/avrodict.py" = ["E501"]
+
 [tool.black]
 line-length = 110
 skip-string-normalization = true
