--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,7 @@
 [tool.ruff]
 target-version = "py38"
 line-length = 110
-ignore = [
-  "E203",
-  "E252",
-  "E402",
-  "F401", 
-  "F403",
-  "F601",
-  "W503"
-]
+ignore = ["E203", "E252", "E402", "F401", "F403", "F601", "W503"]
 
 [tool.ruff.per-file-ignores]
 "avro/resources/avrodict.py" = ["E501"]
