--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
+# SPDX-License-Identifier: MIT
+
 [tool.ruff]
 target-version = "py38"
 line-length = 110
 ignore = ["E203", "E252", "E402", "F401", "F403", "F601"]
-
-[tool.ruff.per-file-ignores]
-"avro/resources/avrodict.py" = ["E501"]
+exclude = ["avro/resources/avrodict.py"]
 
 [tool.black]
 line-length = 110
