updated release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -20,13 +23,11 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install dependencies & build
       run: |
         pip install -U pip
         pip install build
-
-    - name: Build package
-      run: python -m build
+        python -m build
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
@@ -39,5 +40,3 @@ jobs:
       
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
