--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 
-name: Style Check
+name: Formatting
 
 on:
   push:
@@ -15,22 +15,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  linting:
-    name: Ruff
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Run Ruff
-        uses: chartboost/ruff-action@v1
-
   formatting:
     name: Black
 
     runs-on: ubuntu-latest
-    needs: [linting]
 
     steps:
       - name: Checkout
