--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,11 @@
 {
     "[python]": {
         "editor.codeActionsOnSave": {
-            "source.fixAll.ruff": true,
-            "source.organizeImports.ruff": true
+            "source.fixAll.ruff": "explicit",
+            "source.organizeImports.ruff": "explicit"
         },
         "editor.formatOnSave": true
     },
-    "python.formatting.provider": "black",
     "python.testing.pytestArgs": [
         "tests"
     ],
