--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 
-name: Formatting
+name: Format
 
 on:
   push:
@@ -15,9 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  formatting:
-    name: Black
-
+  ruff:
+    name: Ruff
     runs-on: ubuntu-latest
 
     steps:
@@ -25,29 +24,27 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check
-        id: checkifneeded
-        uses: psf/black@stable
-        with:
-          options: "--check --verbose"
-          version: "~= 23.0"
+        id: lintcheck
+        uses: chartboost/ruff-action@v1
         continue-on-error: true
+        with:
+          args: format --check .
 
       - name: Format
-        uses: psf/black@stable
+        uses: chartboost/ruff-action@v1
         with:
-          options: "--verbose"
-          version: "~= 23.0"
+          args: format .
 
       - name: Create pull request
-        if: steps.checkifneeded.outcome != 'success'
+        if: steps.lintcheck.outcome != 'success'
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "🎨 [tuning] Resolved formatting errors"
-          commit-message: "format code using psf/black"
+          title: "🎨 Automated formatting errors fix"
+          commit-message: "fixed formatting errors (ruff)"
           body: |
             Formatter errors found in: ${{ github.sha }}.
           base: ${{ github.head_ref }}
-          branch: actions/black
+          branch: actions/ruff
           reviewers: hitblast
-          delete-branch: true 
+          delete-branch: true
