--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,10 @@
 [tool.ruff]
 target-version = "py38"
 line-length = 110
+exclude = ["venv"]
+
+[tool.ruff.lint]
 ignore = ["E203", "E252", "E402", "F401", "F403", "F601"]
 
-[tool.black]
-line-length = 110
-skip-string-normalization = true
-exclude = '''
-^/(
-  (
-    venv
-  )
-)
-'''
+[tool.ruff.format]
+quote-style = "single"
