--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,14 +51,16 @@ classifiers=[
 avro = "avro.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<4.0"
 
 click = { version="^8", optional = true }
 rich = { version="^13", optional = true }
 pyclip = { version="^0.7.0", optional = true }
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.0.1"
+
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.2.0"
 ruff = "^0.4.2"
 
 [tool.poetry.extras]
