--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,13 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+        virtualenvs-create: true
+        virtualenvs-in-project: true
 
     - name: Install dependencies & build
       run: |
-        poetry build -o dist --no-interaction --no-cache --verbose
+        poetry install --sync --no-interaction --no-root
+        poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
@@ -39,4 +40,4 @@ jobs:
         file_glob: true
       
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
+      run: poetry publish --build
