--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,8 +4,6 @@ name: Deploy to Pages
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
 
 permissions:
   contents: read
@@ -33,11 +31,15 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+    
       - name: Install dependencies
         run: |
-          pip install -U pip
-          pip install -r requirements.txt
-          pip install pdoc3
+          poetry install --sync --no-interaction --no-root --with docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
