--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ pyclip = { version="^0.7.0", optional = true }
 pytest = "^8.0.1"
 
 [tool.poetry.group.docs.dependencies]
+setuptools = "^69.0.0"
 pdoc3 = "^0.10.0"
 
 [tool.poetry.group.dev.dependencies]
