--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './html/avro'
+          path: 'html/avro/*'
           
       - name: Deploy to GitHub Pages
         id: deployment
