fixed lockfile and updated documentation workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,7 +39,7 @@ jobs:
     
       - name: Install dependencies
         run: |
-          poetry install --sync --no-interaction --no-root --all-extras --with docs
+          poetry install --sync --no-interaction --all-extras --with docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -51,7 +51,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'html/avro/*'
+          path: './html/avro'
           
       - name: Deploy to GitHub Pages
         id: deployment
