--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ python = ">=3.8,<4.0"
 click = { version="^8", optional = true }
 rich = { version="^13", optional = true }
 pyclip = { version="^0.7.0", optional = true }
+requests = {version = "^2.32.3", optional = true}
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.0.1"
