--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -47,11 +47,12 @@ jobs:
       - name: Build
         run: |
           poetry run pdoc avro.main --html
+          mv html/avro/main.html index.html
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './html/avro'
+          path: index.html
           
       - name: Deploy to GitHub Pages
         id: deployment
