updated github action workflows according to group changes

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Install dependencies & setup project
       run: |
-        poetry install --sync --no-interaction --no-root --with test
+        poetry install --sync --no-interaction
  
     - name: Run the tests
       run: poetry run pytest .
