--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install dependencies & build
       run: |
-        poetry install --sync --no-interaction --no-root
+        make install
         poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
       
     - name: Publish package
