--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ pdoc3 = ">=0.10,<0.12"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.1"
 ruff = ">=0.4.2,<0.6.0"
+coverage = "^7.6.1"
 
 [build-system]
 requires = ["poetry-core"]
