--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,9 @@ exclude = ["venv"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+only-include = ["src/avro"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/avro"]
