--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,20 +17,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
-    - name: Install dependencies & build
-      run: make install && make build
-      
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        path: dist/*
-        retention-days: 10
+      - name: Setup Python
+        run: uv python install
+
+      - name: Install project & build
+        run: uv sync --all-extras && uv build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: dist/*
+          retention-days: 10
