--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,28 +16,26 @@ jobs:
       id-token: write
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
-    - name: Install dependencies & build
-      run: |
-        make install
-        poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-      
-    - name: Publish package
-      run: poetry publish --build
+      - name: Setup Python
+        run: uv python install
 
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: dist/*
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
+      - name: Install project
+        run: uv sync --all-extras
+
+      - name: Publish package
+        run: uv publish --token ${{ secrets.PYPI_TOKEN }}
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: dist/*
+          tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
