--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,9 +40,9 @@ Documentation = "https://hitblast.github.io/avro.py"
 Repository = "https://github.com/hitblast/avro.py"
 
 
-# optional dependencies
-[project.optional-dependencies]
-dev = ["pdoc3>=0.11.1", "pytest>=8.3.3"]
+# dependency groups
+[dependency-groups]
+dev = ["pytest>=8.3.3", "ruff>=0.7.1"]
 docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]
 
 
