--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,10 +53,10 @@ line-length = 110
 exclude = ["venv"]
 
 [tool.ruff.lint.per-file-ignores]
-"avro/__init__.py" = ["F403"]
-"avro/resources/__init__.py" = ["F403"]
-"avro/resources/dictionary.py" = ["F601"]
-"avro/utils/processor.py" = ["E741"]
+"src/avro/__init__.py" = ["F403"]
+"src/avro/resources/__init__.py" = ["F403"]
+"src/avro/resources/dictionary.py" = ["F601"]
+"src/avro/utils/processor.py" = ["E741"]
 "tests/test_main.py" = ["F601"]
 
 
