--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,33 +26,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python 3
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-    
-      - name: Install dependencies
-        run: |
-          poetry install --sync --no-interaction --with docs
+      - name: Setup Python
+        run: uv python install
+
+      - name: Install project
+        run: uv sync --all-extras --group docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
       - name: Build
         run: |
-          poetry run pdoc avro --html
-        
+          uv run pdoc avro --html
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './html/avro'
-          
+          path: "./html/avro"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
