--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup Python
         run: uv python install
 
-      - name: Install project
-        run: uv sync --all-extras
+      - name: Install project & build
+        run: uv sync --all-extras && uv build
 
       - name: Publish package
         run: uv publish --token ${{ secrets.PYPI_TOKEN }}
