--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ classifiers = [
     'Programming Language :: Python :: 3.13',
     'Topic :: Software Development :: Libraries :: Python Modules',
 ]
+dependencies = [
+    "uvloop>=0.21.0",
+]
 
 
 # project links
@@ -42,7 +45,11 @@ Repository = "https://github.com/hitblast/avro.py"
 
 # dependency groups
 [dependency-groups]
-dev = ["pytest>=8.3.3", "ruff>=0.7.1"]
+dev = [
+    "pytest-asyncio>=0.24.0",
+    "pytest>=8.3.3",
+    "ruff>=0.7.1",
+]
 docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]
 
 
