--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install
+        run: uv python install 3.9
 
       - name: Install project & build
         run: uv sync --all-extras && uv build
