--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,10 +19,6 @@ jobs:
     name: pytest
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: [3.9, 3.10, 3.11, 3.13]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,7 +27,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install ${{ matrix.python-version }}
+        run: uv python install 3.9
 
       - name: Install project
         run: uv sync --all-extras --dev
