--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,18 +43,14 @@ Repository = "https://github.com/hitblast/avro.py"
 
 # dependency groups
 [dependency-groups]
-dev = [
-    "pytest-asyncio>=0.24.0",
-    "pytest>=8.3.3",
-    "ruff>=0.7.1",
-]
+dev = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3", "ruff>=0.7.1"]
 docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]
 
 
 # ruff-specific things
 [tool.ruff]
 target-version = "py39"
-line-length = 110
+line-length = 79
 exclude = ["venv"]
 
 [tool.ruff.lint.per-file-ignores]
