feat: 3.10 fix support with static typing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@
 # uv-specific things
 [project]
 name = "avro-py"
-version = "2025.8.11"
+version = "2025.10.10"
 description = "A modern Pythonic implementation of Avro Phonetic."
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.9"
-authors = [{ name = "HitBlast", email = "hitblastlive@gmail.com" }]
+requires-python = ">=3.10"
+authors = [{ name = "Anindya Shiddhartha", email = "hitblastlive@gmail.com" }]
 keywords = [
     'python',
     'phonetics',
@@ -24,11 +24,11 @@ classifiers = [
     'Intended Audience :: Developers',
     'License :: OSI Approved :: MIT License',
     'Operating System :: OS Independent',
-    'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
+    'Programming Language :: Python :: 3.14',
     'Topic :: Software Development :: Libraries :: Python Modules',
 ]
 dependencies = []
@@ -49,7 +49,7 @@ docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]
 
 # ruff-specific things
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 79
 exclude = [".venv"]
 
