--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-# SPDX-License-Identifier: MIT
-
-
-# uv-specific things
 [project]
 name = "avro-py"
 version = "2025.10.10"
@@ -22,7 +18,7 @@ keywords = [
 ]
 classifiers = [
     'Intended Audience :: Developers',
-    'License :: OSI Approved :: MIT License',
+    'License :: OSI Approved :: Apache Software License',
     'Operating System :: OS Independent',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
@@ -34,20 +30,17 @@ classifiers = [
 dependencies = []
 
 
-# project links
 [project.urls]
 Homepage = "https://pypi.org/project/avro-py"
 Documentation = "https://hitblast.github.io/avro.py"
 Repository = "https://github.com/hitblast/avro.py"
 
 
-# dependency groups
 [dependency-groups]
 dev = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
 docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]
 
 
-# ruff-specific things
 [tool.ruff]
 target-version = "py310"
 line-length = 79
@@ -61,7 +54,6 @@ exclude = [".venv"]
 "tests/test_main.py" = ["F601"]
 
 
-# build system specification
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
