--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ keywords = [
 classifiers = [
     'Intended Audience :: Developers',
     'Development Status :: 5 - Production/Stable',
+    'License :: OSI Approved :: MIT License',
     'License :: OSI Approved :: Apache Software License',
     'Operating System :: OS Independent',
     'Programming Language :: Python :: 3.10',
